Fix doc closing when active doc is in multiple viewspaces

BUG: 460613